--- a/app/components/blocks/GalleriesBlock/GalleriesBlock.module.scss
+++ b/app/components/blocks/GalleriesBlock/GalleriesBlock.module.scss
@@ -105,7 +105,7 @@
 .modal {
   position: relative;
   width: min(96vw, 80rem);
-  max-height: 92dvh;
+  max-height: 92svh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -115,7 +115,7 @@
 
 .modalImage {
   max-width: 100%;
-  max-height: 78dvh;
+  max-height: 78svh;
   object-fit: contain;
   user-select: none;
   -webkit-user-drag: none;
