--- a/app/components/blocks/HeroBlock/HeroBlock.module.scss
+++ b/app/components/blocks/HeroBlock/HeroBlock.module.scss
@@ -7,21 +7,29 @@
 }
 
 .heroMd {
-  height: 68dvh;
+  height: 68svh;
 }
 
 .heroLg {
-  height: 86dvh;
+  height: 86svh;
 }
 
 .heroFull {
-  height: 100dvh;
+  height: 100svh;
 }
 
 .heroImage {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.8s ease;
+}
+
+.heroImageActive {
+  opacity: 1;
 }
 
 .heroOverlay {
